--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "test": "mocha --require test/setup.js",
     "dev": "nodemon src/server.js",
     "start": "node src/server.js",
+    "migrate": "postgrator --config postgrator-config.js",
+    "migrate:test": "set NODE_ENV=test&& npm run migrate",
     "predeploy": "npm audit",
     "deploy": "git push heroku main"
   },
@@ -19,6 +21,7 @@
     "express": "^4.17.1",
     "helmet": "^4.4.1",
     "morgan": "^1.10.0",
+    "pg": "^8.5.1",
     "uuid": "^8.3.2",
     "valid-url": "^1.0.9",
     "winston": "^3.3.3"
@@ -27,6 +30,7 @@
     "chai": "^4.3.0",
     "mocha": "^8.3.0",
     "nodemon": "^2.0.7",
+    "postgrator-cli": "^3.2.0",
     "supertest": "^6.1.3"
   }
 }
